keycloak/server/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  selector: { }
  replicas: 2
  template:
    metadata:
      labels:
        app.life.uni-leipzig.de/redundancy: replicated
        app.life.uni-leipzig.de/service-level: gold
    spec:
      enableServiceLinks: false
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.6.1@sha256:26ae26445475f7fac5f90ee138b1bdb64324f5815fb16133ffdbdb122d97c4d8
        args: [ "start" ]
        ports:
        - name: http
          containerPort: 8080
        - name: management
          containerPort: 9000
        startupProbe:
          httpGet:
            path: /health/started
            port: management
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /health/ready
            port: management
        livenessProbe:
          httpGet:
            path: /health/live
            port: management
        resources:
          requests:
            cpu: "125m"
            memory: "1Gi"
          limits:
            memory: "1Gi"
